editing swagger
